# echorepo-lite

./: .dockerignore  .env.example  .env_zenodo.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.i18n  LICENSE  Makefile  README.md  REPO_OVERVIEW.md  REPO_OVERVIEW_tmp.html  babel.cfg  docker-compose.dev.yml  docker-compose.nosplit.yml  docker-compose.prod.yml  docker-compose.storage.yml  docker-compose.yml  messages.pot  project_paths.py  pyproject.toml  requirements.txt  run.py  start_dev.sh  start_prod.sh  start_translate_containers.sh  stop_dev.sh  stop_prod.sh  stop_translate_containers.sh
docs/: ECHOREPO_Architecture.md  ECHOREPO_Data_API_Guide-2.html  ECHOREPO_Data_API_Guide-2.md  ECHOREPO_Data_API_Guide.html  ECHOREPO_Data_API_Guide.md  ECHOREPO_Data_API_Guide_v3.html  ECHOREPO_Data_API_Guide_v3.md  ECHOREPO_Zenodo_Sync_API_Guide_v1.md  translate_all.html  translate_all.md
echorepo/: __init__ copy.py  __init__.py  analytics.py  config copy.py  config.py  extensions.py  i18n.py  messages.pot
scripts/: compile_translations.sh  find_default_coords.py  make_release.sh  publish_zenodo_bundle.sh  run_pg_migrations.py  translate_all.sh  update_zenodo_bundle.sh  wait_for_postgres.py
tools/: auto_translate.py  check_lab_enrichment_qrs.py  create_funguild_db_once.sh  create_indexes.py  create_lab_enrichment.sql  feature.sh  find_default_coords.py  firebase_kc_sync.py  generate_biodiversity_piecharts.py  i18n_override.py  make_repo_overview.py  publish_api_file_to_zenodo.py  pull_and_enrich_samples.py  rebuild_babel_catalog.sh  refresh_sqlite.py  (+4 more)
(+116 files in other folders)
