[project]
name = "echorepo"
version = "0.0.0"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true
show-fixes = true
exclude = [
  ".venv",
  "venv",
  "node_modules",
  "migrations",
  "dist",
  "build",
  "data", "storage", "keys",
  "echorepo/translations",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # handled by black
